# sepsis-sentinel-api

./: .dockerignore  .gitignore  DEPLOY.md  DOCKER.md  Dockerfile  Dockerfile.frontend  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.py  docker-compose.yml  env.example  pyproject.toml  railway.json  requirements.txt  setup.py  start.sh
api/: __init__.py  main.py
api/models/: sepsis.py
api/services/: __init__.py  sepsis_service.py
artifacts/: readme.md
artifacts/notebook/: Cópia_de_Phase_4_1_CRISP_DM.ipynb  Deadline_Version_DM (2).ipynb  Deadline_Version_IA_models.ipynb
frontend/: app.py
frontend/.streamlit/: config.toml
ml/: model.joblib  predict.py  train_model.py
scripts/: feature_info.joblib  train_and_deploy.py
